--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -22,3 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules/@popperjs/core/package.json
+
+node_modules/  
+package-lock.json  
+yarn.lock  
