--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,6 +20,10 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16"
+  },
+  "devDependencies": {
+    "sinon": "^19.0.2"
   }
 }
