--- a/Backend/package.json
+++ b/Backend/package.json
@@ -20,8 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
-    "stripe": "^17.5.0",
-    "node-schedule": "^2.1.1"
+    "stripe": "^17.5.0"
   }
 }
