--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.689.0",
     "@aws-sdk/s3-request-presigner": "^3.691.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -20,8 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.3",
+    "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
-    "stripe": "^17.5.0",
-    "node-schedule": "^2.1.1"
+    "stripe": "^17.5.0"
   }
 }
