--- a/Backend/package.json
+++ b/Backend/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.11.3",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.16",
+    "sentiment": "^5.0.2",
     "stripe": "^17.5.0"
   }
 }
